APB-141 admin css mobile responsive bugfixes, lists using scrollbar classes in common, filter select and titles moved, pm2 log css bugfix, rtl adjustments, mapbox does not support rtl, created dialogue_button css class for all dialogue buttons, dialogue_lov moved to common, chart 2 bugfix sort days as integers both databases, bugfix sql start parameters admin oracle, bugfix update app record control enabled and async

--- a/apps/app1/css/app.css
+++ b/apps/app1/css/app.css
@@ -820,6 +820,13 @@ div.ray8 {
     border-left: 12px solid yellow;
 }
 
+.theme_sun .dialogue_button{
+	color: #a49775 !important;
+}
+.theme_sun .dialogue_button:hover, .theme_sun .dialogue_button:active{
+	color:#6ab344 !important;
+}
+
 .theme_sun .toolbar_button{
 	color: #a49775 !important;
 }
@@ -969,10 +976,16 @@ div.ray8 {
 .theme_moon div.sunholder {
     animation: unset;
 }
+.theme_moon .dialogue_button{
+	color : #a49775;
+}
+.theme_moon .dialogue_button:hover, .theme_moon .dialogue_button:active{
+	color:#6ab344 !important;
+}
 .theme_moon .toolbar_button{
 	color : #a49775;
 }
-.theme_moon .toolbar_button:hover, .theme_sun .toolbar_button:active{
+.theme_moon .toolbar_button:hover, .theme_moon .toolbar_button:active{
 	color:#6ab344 !important;
 }
 .theme_moon #common_window_info{
